Add responsive flexbox exampe

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="flex-container">
-      <a href="#" class="elem">1</a>
-      <a href="#" class="elem">2</a>
-      <a href="#" class="elem"><span>3</span></a>
-      <a href="#" class="elem">4</a>
-      <a href="#" class="elem">1</a>
-      <a href="#" class="elem">2</a>
-      <a href="#" class="elem"><span>6</span></a>
-      <a href="#" class="elem">4</a>
-      <a href="#" class="elem">1</a>
-      <a href="#" class="elem">2</a>
-      <a href="#" class="elem"><span>9</span></a>
-      <a href="#" class="elem">4</a>
+    <section>
+      <div class="flex-container">
+        <span class="left-item">Lorem ipsum dolor sit.</span>
+        <span class="right-item">10.04.21</span>
+      </div>
+      <div class="flex-container">
+        <span class="left-item">Lorem ipsum</span>
+        <span class="right-item">10.04.21</span>
+      </div>
+      <div class="flex-container">
+        <span class="left-item"
+          >Lorem ipsum dolor sit amet consectetur a.</span
+        >
+        <span class="right-item">10.04.21</span>
+      </div>
     </section>
   </body>
 </html>
